Prevent horizontal scrolling caused by liong button text

--- a/css/_btn.scss
+++ b/css/_btn.scss
@@ -4,7 +4,6 @@
   background: transparent;
   border-radius: $br * 2;
   padding: 0.4em 0.8em;
-  white-space: nowrap;
   box-shadow: 0 2px 4px -2px rgba(black, .6);
   cursor: pointer;
   text-decoration: none;
